base-installer (1.17) UNRELEASED; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Bump kernel defaults to 2.4.27-2 and 2.6.8-2 for i386, ia64, and s390.
      hppa is still trailing behind at 2.6.8-1.
    - Use major version of target kernel rather than installation kernel to
      work out whether to use an initrd or (on powerpc) to run mkvmlinuz.
  * Matt Kraai
    - Fix the spelling of "file system".
  * Steve Langasek
    - Bump kernel defaults to 2.4.27-2 for alpha, and to 2.6.8-2 for hppa.
    - Update kernel test directory to match.
  * Sven Luther
    - 2.4.27-3 powerpc kernel now produces only one kernel-image-2.4.27-powerpc
      package, so dropped the pmac/chrp/chrp-rs6k/prep handling from
      kernel/powerpc.sh.

 -- Sven Luther <luther@debian.org>  Sat, 26 Feb 2005 18:27:07 +0100

base-installer (1.16) experimental; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Add G5 PowerMac7,3 tests based on /proc/cpuinfo provided by Shyamal
      Prasad.
    - Prefer SMP kernels on multi-processor powerpc systems.
    - Improve kernel selection for Transmeta Crusoe i386 systems.
  * Updated translations:
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Gallegan (gl.po) by Hctor Fenndez Lpez
    - Italian (it.po) by Davide Meloni
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Dmitry Beloglazov

 -- Colin Watson <cjwatson@debian.org>  Sun, 30 Jan 2005 13:44:27 +0000

base-installer (1.15) experimental; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Recognise POWER4+ and PPC970FX cpuinfo entries as power4 systems.
    - Only look at the first cpu line in cpuinfo on powerpc.