@@ -1,6 +1,7 @@
 cpuinfo pentium-3.cpuinfo
 majors 2.4 2.6
 flavour 686
+env SPEAKUP /nonexistent
 kernel-2.4 kernel-image-2.4-686
 kernel-2.6 kernel-image-2.6-686
 usable \
